--- a/scss/elements/_section.scss
+++ b/scss/elements/_section.scss
@@ -1,17 +1,23 @@
 section {    
-    height: 480px;
+    height: 680px;
     width: 100%;
+    color: $white;
     background-color: $black;
-    margin: 400px 0;
-    color: white;
 }
 
-section h2 {
-    font-size: 2.3rem;
-    text-align: center;
-    padding-top: 2.5rem;
+main section {
+    margin: 200px 0;
+    div {        
+        padding: 100px;
+        height: 100%;
+        background-color: $green60;        
+        box-sizing: border-box;
+    }
 }
 
-section p {
-    font-size: 1.2rem;
+.has-image {
+    background-image: url(../../images/ux-background.jpg);
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
 }
