--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: rgba(255, 0, 0, .9);
+    background-color: $red80;
     width: 100%;
     height: 80px;
     color: $white;
@@ -11,27 +11,38 @@ header {
 
 .header-wrapper {
     width: 80%;
+    height: inherit;
     display: flex;
     justify-content: $sp-b;
     position: relative;
     margin: 0 $a;
+    box-sizing: border-box;
+    padding-top: 2rem
 }
 
-.header-wrapper h1 {
-    margin: 3rem 6rem;
+.header-wrapper .logo {
+    margin: 0rem 6rem;
+    background-image: url(../../images/logo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 32px;
+    min-width: 160px;
 }
 
 .header-wrapper nav {
     display: flex;
     width: 50%;
+    min-width: 700px;
     font-size: 2.1rem;
-    margin: 25px 0;
     margin-right: 4rem;
     justify-content: $sp-a;    
 }
 
 .header-wrapper a {
     color: $white;
-    text-decoration: $n;
     margin-left: 20px;
+}
+
+.logo a {
+    width: 100%;
 }
