--- a/scss/blocks/_pre-footer.scss
+++ b/scss/blocks/_pre-footer.scss
@@ -1,4 +1,13 @@
 .pre-footer {
-    @include tilted(5deg, rgb(255, 0, 0));
+    @include tilted(5deg, $red);
     height: 250px;
+    .content {
+        width: 60%;
+        margin: auto;
+        text-align: center;
+    }
+    .btn {
+        position: relative;
+        top: 40px;
+    }
 }
