--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -22,7 +22,7 @@ header {
 
 .header-wrapper .logo {
     margin: 0rem 6rem;
-    background-image: url(../../images/logo.png);
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Wi-Fi_Logo.svg/1280px-Wi-Fi_Logo.svg.png);
     background-size: contain;
     background-repeat: no-repeat;
     height: 32px;
