--- a/scss/elements/_section.scss
+++ b/scss/elements/_section.scss
@@ -16,8 +16,8 @@ main section {
 }
 
 .has-image {
-    background-image: url(../../images/ux-background.jpg);
+    background-image: url(https://www.walldevil.com/wallpapers/a93/wheat-field-hill-meadow-tree.jpg);
     background-size: cover;
-    background-position: top;
+    background-position: center;
     background-repeat: no-repeat;
 }
